unpackaged/main/default/objects/GT_General_Event_Costs__c/GT_General_Event_Costs__c.object-meta.xml
<CustomObject>
    <description>This is an Activity Type for Crown Castle Users in Generic Template (GT).</description>
    <label>General Event Costs</label>
    <nameField>
        <displayFormat>GEC-{00000}</displayFormat>
        <label>General Event Costs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>General Event Costs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>