unpackaged/main/default/objects/GT_General_Event_Costs__c/fields/Additional_Costs_needed__c.field-meta.xml
<CustomField>
    <fullName>Additional_Costs_needed__c</fullName>
    <label>Additional Costs needed ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>