unpackaged/main/default/objects/GT_General_Event_Costs__c/fields/GES_Connect_Event__c.field-meta.xml
<CustomField>
    <fullName>GES_Connect_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GES Connect Event</label>
    <referenceTo>GT_Event__c</referenceTo>
    <relationshipLabel>General Event Costs</relationshipLabel>
    <relationshipName>General_Event_Costs</relationshipName>
    <type>Lookup</type>
</CustomField>