unpackaged/main/default/objects/GT_General_Event_Costs__c/fields/Registration_Cost__c.field-meta.xml
<CustomField>
    <fullName>Registration_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Registration Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>