unpackaged/main/default/objects/GT_General_Event_Costs__c/recordTypes/General_Event_Costs_CC.recordType-meta.xml
<RecordType>
    <fullName>General_Event_Costs_CC</fullName>
    <active>true</active>
    <description>General Event Costs for CC</description>
    <label>General Event Costs CC</label>
</RecordType>