unpackaged/main/default/objects/GT_General_Event_Costs__c/recordTypes/General_Event_Costs_GT.recordType-meta.xml
<RecordType>
    <fullName>General_Event_Costs_GT</fullName>
    <active>true</active>
    <description>General Event Costs for GT</description>
    <label>General Event Costs GT</label>
</RecordType>