unpackaged/main/default/objects/GT_General_Event_Costs__c/recordTypes/General_Event_Costs_NNI.recordType-meta.xml
<RecordType>
    <fullName>General_Event_Costs_NNI</fullName>
    <active>true</active>
    <description>General Event Costs for NNI</description>
    <label>General Event Costs NNI</label>
</RecordType>